[package]
name = "xNFT-entangler"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x_nft_entangler"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-spl = { git = "https://github.com/coral-xyz/anchor", features = ["metadata"] }
anchor-lang = { git = "https://github.com/coral-xyz/anchor" }
spl-token = { version = "^3.3.0",  features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.3.4", features = ["no-entrypoint"] }
xnft = {git = "https://github.com/coral-xyz/xnft", branch = "master"}
spl-associated-token-account = {version = "^1.1.1", features = ["no-entrypoint"]}
thiserror = "~1.0"
arrayref = "~0.3.6"